JCL-186: Update quarkus demo to use solid module (#179)
Co-authored-by: Aaron Coburn <aaronc@inrupt.com>